--- a/syllabus.html
+++ b/syllabus.html
@@ -23,7 +23,7 @@
       <h1>Syllabus dot points</h1>
 
       <ul>
-        <a href="/concepts.html">
+        <a href="concepts.html">
           <li class="li-wrapper">
             Concepts
             <ul>
@@ -35,7 +35,7 @@
             </ul>
           </li>
         </a>
-        <a href="/syntax.html">
+        <a href="syntax.html">
           <li class="li-wrapper">
             Language Syntax Concepts
             <ul>
@@ -48,7 +48,7 @@
           </li>
         </a>
 
-        <a href="/use.html">
+        <a href="use.html">
           <li class="li-wrapper">
             Appropriate use
             <ul>
@@ -58,7 +58,7 @@
           </li>
         </a>
 
-        <a href="/issues.html">
+        <a href="issues.html">
           <li class="li-wrapper">
             Issues with certain paradigms
             <ul>
