--- a/use.html
+++ b/use.html
@@ -39,7 +39,7 @@
         <li>
           <section>
             <img
-              src="pic-pickleball.jpg"
+              src="IPT-assignment/pic-pickleball.jpg"
               alt="pickleball"
               height="300px"
               style="
@@ -82,7 +82,7 @@
           </section>
         </li>
         <li>
-          <img src="pic-drum.jpg" alt="drum" height="300px" />
+          <img src="IPT-assignment/pic-drum.jpg" alt="drum" height="300px" />
           <p>
             drumming is very cool. the coolest. too bad u lost that coolness
             when u GOT RID OF YOUR KIT. <br /><br />
@@ -91,7 +91,7 @@
         </li>
         <li>
           <img
-            src="pic-bouldering.jpg"
+            src="IPT-assignment/pic-bouldering.jpg"
             alt="climb walls that have little bumps on them"
             height="500px"
           />
@@ -101,7 +101,7 @@
           </p>
         </li>
         <li>
-          <img src="pic-piano.jpg" alt="paino" height="500px" />
+          <img src="IPT-assignment/pic-piano.jpg" alt="paino" height="500px" />
           <p>
             return to ur asian roots and be the dream child of every asian
             parent in the world by becoming super duper pro at piano, just as a
