--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </pre>
       </div>
 
-      <image src="/oop.png" />
+      <image src="oop.png" />
     </div>
     <script src="" async defer></script>
   </body>
