--- a/syllabus.html
+++ b/syllabus.html
@@ -23,7 +23,7 @@
       <h1>Syllabus dot points</h1>
 
       <ul>
-        <a href="concepts.html">
+        <a href="concepts.html" id="concepts">
           <li class="li-wrapper">
             Concepts
             <ul>
